feat: implements multiblock image